# matomocamp-bot

./: .gitignore  README.md  config.py  data.py  init.py  lowercase.py  main.py  matomocamp-2021_sessions.json  matomocamp-2022_sessions.json  matomocamp-2023_sessions.json  pyproject.toml  quick_list.py  urls.py  utils.py
